--- a/js/libs/jq-signature/index.html
+++ b/js/libs/jq-signature/index.html
@@ -30,7 +30,9 @@
 					<h3>高级例子：</h3>
 					<p>Sign Below:</p>
 					<div class="js-signature" data-width="600" data-height="200" data-border="1px solid black" data-line-color="#bc0000" data-auto-fit="true"></div>
-					<p><button id="clearBtn" class="btn btn-default" onclick="clearCanvas();">Clear Canvas</button>&nbsp;<button id="saveBtn" class="btn btn-default" onclick="saveSignature();" disabled>Save Signature</button></p>
+					<p>
+					<button id="clearBtn" class="btn btn-default" onclick="clearCanvas();">Clear Canvas</button>&nbsp;
+					<button id="saveBtn" class="btn btn-default" onclick="saveSignature();" disabled>Save Signature</button></p>
 					<div id="signature">
 						<p><em>Your signature will appear here when you click "Save Signature"</em></p>
 					</div>
